--- a/package.json
+++ b/package.json
@@ -8,14 +8,28 @@
     "start": "next start"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.9.2",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "canvas-confetti": "^1.9.3",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
     "next": "16.0.0",
     "react": "19.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-circular-progressbar": "^2.2.0",
+    "react-date-picker": "^12.0.1",
     "react-dom": "19.2.0",
-    "recharts": "^3.3.0"
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.5",
+    "react-webcam": "^7.2.0",
+    "recharts": "^3.3.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
