--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "framer-motion": "^12.23.24",
     "jwt-decode": "^4.0.0",
     "next": "^16.0.7",
+    "pixi-live2d-display": "^0.3.1",
+    "pixi.js": "^8.14.3",
     "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
     "react-circular-progressbar": "^2.2.0",
