--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# --------------------------------------------------
+# FRONTEND (Next.js / Node)
+# --------------------------------------------------
 
 # dependencies
 /node_modules
@@ -10,28 +13,19 @@
 !.yarn/releases
 !.yarn/versions
 
+# next.js build
+/.next/
+/out/
+/build
+
 # testing
 /coverage
 
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
 
 # vercel
 .vercel
@@ -39,3 +33,91 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# --------------------------------------------------
+# BACKEND (Flask / Python)
+# --------------------------------------------------
+
+# Virtual environments
+venv/
+backend/venv/
+env/
+.venv/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+
+# Flask instance folder
+instance/
+
+# Pytest
+.pytest_cache/
+
+# Coverage
+.coverage
+htmlcov/
+
+# --------------------------------------------------
+# ENVIRONMENT VARIABLES (CRITICAL)
+# --------------------------------------------------
+
+.env
+.env.*
+*.env
+
+# --------------------------------------------------
+# DATABASE FILES
+# --------------------------------------------------
+
+*.sqlite3
+*.db
+
+# --------------------------------------------------
+# OS FILES
+# --------------------------------------------------
+
+.DS_Store
+Thumbs.db
+
+# --------------------------------------------------
+# LOG FILES
+# --------------------------------------------------
+
+*.log
+
+# --------------------------------------------------
+# IDE
+# --------------------------------------------------
+
+.vscode/
+.idea/
+
+# --------------------------------------------------
+# TORCH / LARGE BINARIES SAFETY
+# --------------------------------------------------
+
+*.dll
+*.dylib
+*.bin
+*.pt
+*.onnx
